--- a/tiao-pardinho-frontend/package.json
+++ b/tiao-pardinho-frontend/package.json
@@ -2,6 +2,7 @@
   "name": "tiao-pardinho-frontend",
   "private": true,
   "version": "0.0.0",
+  "proxy": "http://localhost:8000",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,6 +14,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.14",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
